# NPG_gr4_Szachy

./: .gitignore  CMakeLists.txt  Program_szachowy_opis_funckjonalny.docx  README.md  README.txt  Szachy_kopia.xlsx  main.cpp
include/: Game.hpp  Graphics.hpp  Piece.hpp  board.hpp  globalVariables.h  mainLoop.hpp  window.hpp
include/pieces/: Rook.hpp  bishop.hpp  king.hpp  knight.hpp  pawn.hpp  queen.hpp  rook.hpp
src/: App.cpp  Game.cpp  Piece.cpp  board.cpp  globalVariables.cpp  mainLoop.cpp  window.cpp
src/pieces/: Rook.cpp  bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
